Fix logo alignment for dynamic themes
(cherry picked from commit fa7e2ecd8a5da8a0cbde70e9dad697b73b99a64c)

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -113,9 +113,7 @@
     img {
         width: 60px;
         max-height: 100%;
-        margin-top: -1px;
         position: relative;
-        top: ~"calc(50% - 11px)";
     }
 }
 
@@ -169,6 +167,11 @@ html:not(.smartphone) #io-ox-appcontrol #io-ox-toprightbar #io-ox-launcher .laun
 
     & > div {
         display: block;
+    }
+
+    #io-ox-top-logo {
+        display: flex;
+        align-items: center;
     }
 
     .badge {
